--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,8 @@ button {
   font-weight: bold;
   cursor: pointer;
 }
+
+button:hover {
+  background-color: rgb(221, 19, 19);
+  border: 2px solid red;
+}
